bug 138052 patch by timeless r=biesi sr=darin data: is still too agressive about stripping whitespace XML